welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:13: error: not found: value y
    y= getY+1
    ^ColumnByColumn:14: error: not found: value x
    setPos(x, y)
           ^ColumnByColumn:14: error: not found: value y
    setPos(x, y)
              ^ColumnByColumn:17: error: not found: value y
    y=0
    ^ColumnByColumn:18: error: not found: value x
    x=getX+1
    ^ColumnByColumn:19: error: not found: value x
    setPos(x, y)
           ^ColumnByColumn:19: error: not found: value y
    setPos(x, y)
              ^