welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
def testPos() : Boolean ={
  var h: Int= getMondeHauteur()-1
  var l: Int = getMondeLargeur()-1
  if (getX == l & getY == h) {
    return true
  }
  return false
}



def deplace(){
  if (getY < getMondeHauteur-1){
    y= getY+1
    setPos(x, y)
  }
  else{
    y=0
    x=getX+1
    setPos(x, y)
  }
}



override def run() {
  ecritMessage(0)
  var c : Int=1
  //do {
  for (i<-0 to 4) {
    deplace();    
    ecritMessage(c)
    c = c+1
  }
  //while (!testPos)
}